--- a/MacGorm/en.lproj/GormDocument.xib
+++ b/MacGorm/en.lproj/GormDocument.xib
@@ -14,11 +14,12 @@
                 <outlet property="filePrefsWindow" destination="kCQ-wZ-id6" id="GY4-kC-TuQ"/>
                 <outlet property="selectionBox" destination="Bl9-Gv-cFd" id="Rio-MW-UWQ"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="UGY-XT-Fbx"/>
+                <outlet property="window1" destination="QvC-M9-y7g" id="76y-1f-m7r"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application" customClass="Gorm"/>
-        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
+        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g" customClass="GormDocumentWindow">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="196" y="240" width="480" height="270"/>
@@ -172,7 +173,7 @@
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hidesOnDeactivate="YES" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" frameAutosaveName="" animationBehavior="default" id="kCQ-wZ-id6" customClass="NSPanel">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" utility="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="120" y="118" width="408" height="210"/>
+            <rect key="contentRect" x="120" y="118" width="408" height="206"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
             <view key="contentView" id="C4P-sF-3fu">
                 <rect key="frame" x="0.0" y="0.0" width="408" height="206"/>
